kill aura and titlescreen patch